--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
             <!--Banner Content-->
             <div id="banner-content" class="row clearfix">
 
-                <div class="col-38">
+                <div class="col-2">
 
                     <div class="section-heading">
-                        <h1>GENERAL HOUSEHOLD SERVICES</h1>
+                        <h1>GENERAL HOUSEHOLD SERVICES (HSS Company)</h1>
                         <h2>PROVIDING GENERAL HOUSEHOLD SERVICE, BASIC CHILD-MINDING AND ELDER-MINDING SERVICES</h2>
                     </div>
 
