--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
                             <!--Social Icons in Header-->
                             <ul class="social-icons">
                                 <li>
-                                    <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
+                                    <a target="_blank" title="Facebook"
+                                        href="https://www.facebook.com/profile.php?id=100094296364384">
                                         <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                                     </a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a target="_blank" title="Google+" href="http://google.com/+username">
                                         <i class="fa fa-google-plus fa-1x"></i><span>Google+</span>
                                     </a>
@@ -100,7 +101,7 @@
                                     <a target="_blank" title="behance" href="http://www.behance.net">
                                         <i class="fa fa-behance fa-1x"></i><span>Behance</span>
                                     </a>
-                                </li>
+                                </li> -->
                             </ul>
                             <!--End of Social Icons in Header-->
 
@@ -113,19 +114,13 @@
                                     <a href="#banner">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#about">About</a>
-                                </li>
-                                <li>
-                                    <a href="#gallery">Gallery</a>
-                                </li>
-                                <li>
-                                    <a href="#testimonials">Testimonials</a>
-                                </li>
-                                <li>
-                                    <a href="#clients">Clients</a>
+                                    <a href="#service">Service</a>
                                 </li>
                                 <li>
                                     <a href="#pricing">Pricing</a>
+                                </li>
+                                <li>
+                                    <a href="#enquiry">Enquiry</a>
                                 </li>
                                 <li>
                                     <a href="#contact">Contact</a>
@@ -147,7 +142,7 @@
                 <div class="col-2">
 
                     <div class="section-heading">
-                        <h1>GENERAL HOUSEHOLD SERVICES (HSS Company)</h1>
+                        <h1>GENERAL HOUSEHOLD SERVICES <br>(HSS Company)</h1>
                         <h2>PROVIDING GENERAL HOUSEHOLD SERVICE, BASIC CHILD-MINDING AND ELDER-MINDING SERVICES</h2>
                     </div>
 
@@ -164,7 +159,7 @@
         <main id="content">
 
             <!--Introduction-->
-            <section id="about" class="introduction scrollto">
+            <section id="service" class="introduction scrollto">
 
                 <div class="row clearfix">
 
@@ -177,7 +172,6 @@
                         </div>
 
                     </div>
-
                     <div class="col-2-3">
 
                         <!--Icon Block-->
@@ -188,10 +182,8 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>HTML5 &amp; CSS3</h4>
-                                <p>Has ne tritani atomorum conclusionemque, in dolorum volumus cotidieque eum. At vis
-                                    choro
-                                    neglegentur iudico</p>
+                                <h4>Cleaning &amp; Cooking</h4>
+                                <p>Cleaning, Cooking, and Ironing</p>
                             </div>
                         </div>
                         <!--End of Icon Block-->
@@ -204,9 +196,8 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>Easy to Use</h4>
-                                <p>Cu vero ipsum vim, doctus facilisi sea in. Eam ex falli honestatis repudiandae, sit
-                                    detracto mediocrem disputationi</p>
+                                <h4>Deep Cleaing</h4>
+                                <p>Deep Cleaning Including Windows, Doors, Balconies</p>
                             </div>
                         </div>
                         <!--End of Icon Block-->
@@ -219,10 +210,8 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>Fully Responsive</h4>
-                                <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an
-                                    pro
-                                    nemore vivendum</p>
+                                <h4>Domestic services</h4>
+                                <p>Elderly / Kids / Infant care and Assisting in shopping etc.</p>
                             </div>
                         </div>
                         <!--End of Icon Block-->
@@ -235,10 +224,8 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>Parallax Effect</h4>
-                                <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an
-                                    pro
-                                    nemore vivendum</p>
+                                <h4>Domestic services</h4>
+                                <p>Elderly / Kids / Infant care and Assisting in shopping etc.</p>
                             </div>
                         </div>
                         <!--End of Icon Block-->
@@ -251,137 +238,6 @@
             </section>
             <!--End of Introduction-->
 
-
-            <!--Gallery-->
-            <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
-                data-featherlight-filter="a">
-
-                <!-- <a href="images/gallery-images/gallery-image-7.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                    data-wow-delay="0.1s"><img src="images/gallery-images/gallery-image-7.jpg" alt="Landing Page" /></a> -->
-
-                <!-- <a href="images/gallery-images/gallery-image-9.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                    data-wow-delay="0.5s"><img src="images/gallery-images/gallery-image-9.jpg" alt="Landing Page" /></a>
-                <a href="images/gallery-images/gallery-image-10.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                    data-wow-delay="1.1s"><img src="images/gallery-images/gallery-image-10.jpg" alt="Landing Page" /></a> -->
-                <a href="images/gallery-images/gallery-image-11.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                    data-wow-delay="0.4s"><img src="images/gallery-images/gallery-image-11.jpg" alt="Landing Page" /></a>
-                    <a href="images/gallery-images/gallery-image-8.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                    data-wow-delay="0.3s"><img src="images/gallery-images/gallery-image-8.jpg" alt="Landing Page" /></a>
-                <a href="images/gallery-images/gallery-image-12.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                    data-wow-delay="0.5s"><img src="images/gallery-images/gallery-image-12.jpg" alt="Landing Page" /></a>
-
-            </aside>
-            <!--End of Gallery-->
-
-
-
-            <!--Testimonials-->
-            <aside id="testimonials" class="scrollto text-center" data-enllax-ratio=".2">
-
-                <div class="row clearfix">
-
-                    <div class="section-heading">
-                        <h3>FEEDBACK</h3>
-                        <h2 class="section-title">What our customers are saying</h2>
-                    </div>
-
-                    <!--User Testimonial-->
-                    <blockquote class="col-3 testimonial classic">
-                        <img src="images/user-images/user-1.jpg" alt="User" />
-                        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua</q>
-                        <footer>John Doe - Happy Customer</footer>
-                    </blockquote>
-                    <!-- End of Testimonial-->
-
-                    <!--User Testimonial-->
-                    <blockquote class="col-3 testimonial classic">
-                        <img src="images/user-images/user-2.jpg" alt="User" />
-                        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua</q>
-                        <footer>Roslyn Doe - Happy Customer</footer>
-                    </blockquote>
-                    <!-- End of Testimonial-->
-
-                    <!--User Testimonial-->
-                    <blockquote class="col-3 testimonial classic">
-                        <img src="images/user-images/user-3.jpg" alt="User" />
-                        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua</q>
-                        <footer>Thomas Doe - Happy Customer</footer>
-                    </blockquote>
-                    <!-- End of Testimonial-->
-
-                </div>
-
-            </aside>
-            <!--End of Testimonials-->
-
-            <!--Clients-->
-            <section id="clients" class="scrollto clearfix">
-                <div class="row clearfix">
-
-                    <div class="col-3">
-
-                        <div class="section-heading">
-                            <h3>TRUST</h3>
-                            <h2 class="section-title">Companies who use our services</h2>
-                            <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
-                        </div>
-
-                    </div>
-
-                    <div class="col-2-3">
-
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/company-logo1.png" alt="Company" />
-                            <div class="client-overlay"><span>Tree</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/company-logo2.png" alt="Company" />
-                            <div class="client-overlay"><span>Fingerprint</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/company-logo3.png" alt="Company" />
-                            <div class="client-overlay"><span>The Man</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/company-logo4.png" alt="Company" />
-                            <div class="client-overlay"><span>Mustache</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/company-logo5.png" alt="Company" />
-                            <div class="client-overlay"><span>Goat</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/company-logo6.png" alt="Company" />
-                            <div class="client-overlay"><span>Justice</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/company-logo7.png" alt="Company" />
-                            <div class="client-overlay"><span>Ball</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/company-logo8.png" alt="Company" />
-                            <div class="client-overlay"><span>Cold</span></div>
-                        </a>
-
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/company-logo9.png" alt="Company" />
-                            <div class="client-overlay"><span>Cold</span></div>
-                        </a>
-
-                    </div>
-
-                </div>
-            </section>
-            <!--End of Clients-->
-
             <!--Pricing Tables-->
             <section id="pricing" class="secondary-color text-center scrollto clearfix ">
                 <div class="row clearfix">
@@ -392,7 +248,7 @@
                     </div>
 
                     <!--Pricing Block-->
-                    <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="pricing-block-content">
                             <h3>Basic Domestic / Cleaning Services</h3>
                             <p class="pricing-sub">Monday - Saturday</p>
@@ -400,7 +256,8 @@
                                 <div class="price"><span>$</span>15</div>
                                 <p>per hour. </p>
                             </div>
-                            <ul><li> Cleaning, Cooking, and Ironing</li>
+                            <ul>
+                                <li> Cleaning, Cooking, and Ironing</li>
                                 <li>Valid between 8am-8pm</li>
                                 <li>After Working Hours (8pm-11pm): $18/hour</li>
                                 <li>From 11pm to 8am: $20/hour + Taxi/Grab Fare Back Home</li>
@@ -431,13 +288,13 @@
                     <!--End Pricing Block-->
 
                     <!--Pricing Block-->
-                    <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="pricing-block-content">
-                            <h3>Enhanced Domestic / Cleaning Services</h3>
-                            <!-- <p class="pricing-sub">Monday - Saturday</p> -->
+                            <h3>General Cleaning Services</h3>
+                            <p class="pricing-sub">&nbsp </p>
                             <div class="pricing">
-                                <div class="price"><span></span>+$5</div>
-                                <p>per hour. </p>
+                                <div class="price"><span></span>$20</div>
+                                <p>onwards.</p>
                             </div>
                             <ul>
                                 <li>Cleaning, Cooking, and Ironing</li>
@@ -453,32 +310,62 @@
             </section>
             <!--End of Pricing Tables-->
 
+            <!--enquiry-->
+            <aside id="enquiry" class="scrollto text-center" data-enllax-ratio=".2">
 
-            <!--Testimonials-->
+                <div class="row clearfix">
+
+                    <div class="section-heading">
+                        <h2 class="section-title">Enquiry</h2>
+                        <h3> Request for quotation.</h3>
+                    </div>
+                    <blockquote class="col-1 classic">
+                        <h4>
+                            <p> <a
+                                    href="https://api.whatsapp.com/send?phone=6596394066&text=hello!%20i%20am%20interested%20in%20your%20cleaning%20services!">
+                                    <img src="images/wa_chat_logo.png" />
+                                </a>
+                            </p>
+                            <p> Email: <a
+                                    href="mailto:centralplacements2022@gmail.com?subject=Hello! i am interested in your cleaning services&amp;body=My name is ">centralplacements2022@gmail.com</a>
+                            </p>
+                        </h4>
+                    </blockquote>
+                    <!-- End of Testimonial-->
+
+                </div>
+
+            </aside>
+            <!--End of enquiry-->
+
+            <!--contact us-->
             <aside id="contact" class="scrollto text-center" data-enllax-ratio=".2">
 
                 <div class="row clearfix">
 
                     <div class="section-heading">
-                        <h3>Contact us</h3>
-                        <h2 class="section-title">Give us a call!</h2>
+                        <h2 class="section-title">Contact information</h2>
                     </div>
                     <!--User Testimonial-->
-                    <blockquote class="col-1 classic">
-                        <!-- <img src="images/map.png" alt="User" /> -->
+                    <blockquote class="col-1 classic text-left">
                         <h4>
-                        <p> HP: +65 96394646 / +65 96394066</p>
-                        <p> No. 100 Jalan Sultan, #03-48</p>
-                        <p>  Sultan Plaza, Singapore 19001</p>
-                        <p>  Email: centralplacements2022@gmail.com</p> 
-                    </h4>
+                            <p> HP: +65 96394646 / +65 96394066</p>
+                            <p> No. 100 Jalan Sultan, #03-48</p>
+                            <p> Sultan Plaza, Singapore 19001</p>
+                            <p> Email: <a
+                                    href="mailto:centralplacements2022@gmail.com?subject=Hello! i am interested in your cleaning services&amp;body=My name is ">centralplacements2022@gmail.com</a>
+                            </p>
+                        </h4>
                     </blockquote>
                     <!-- End of Testimonial-->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3988.7873164685125!2d103.8619541!3d1.3025685!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da19b15445cadf%3A0xab2e5e43e3fab0d1!2sSultan%20Plaza!5e0!3m2!1sen!2ssg!4v1696178975188!5m2!1sen!2ssg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3988.7873164685125!2d103.8619541!3d1.3025685!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da19b15445cadf%3A0xab2e5e43e3fab0d1!2sSultan%20Plaza!5e0!3m2!1sen!2ssg!4v1696178975188!5m2!1sen!2ssg"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
             </aside>
-            <!--End of Testimonials-->
+            <!--End of contact us-->
         </main>
         <!--End Main Content Area-->
 
