--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         <footer id="landing-footer" class="clearfix">
             <div class="row clearfix">
 
-                <p id="copyright" class="col-2">© 2020-2023 CENTRAL PLACEMENTS PTE. LTD. <a href="#"> UEN No: 53448886B
+                <p id="copyright" class="col-2">© 2020-2023 CENTRAL PLACEMENTS <a href="#"> UEN No: 53448886B
                     </a></p>
 
                 <!--Social Icons in Footer-->
