--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
 
                     <!--Call to Action-->
-                    <a href="#" class="button">REQUEST SERVICE TODAY</a>
+                    <a href="tel:96394066" class="button">REQUEST SERVICE TODAY</a>
                     <!--End Call to Action-->
 
                 </div>
@@ -262,7 +262,7 @@
                                 <li>After Working Hours (8pm-11pm): $18/hour</li>
                                 <li>From 11pm to 8am: $20/hour + Taxi/Grab Fare Back Home</li>
                             </ul>
-                            <a href="#" class="button">BUY TODAY</a>
+                            <a href="tel:96394066" class="button">BUY TODAY</a>
                         </div>
                     </div>
                     <!--End Pricing Block-->
@@ -282,7 +282,7 @@
                                 <li>After Working Hours (8pm-11pm): $20/hour</li>
                                 <li>From 11pm to 8am: $22/hour + Taxi/Grab Fare Back Home</li>
                             </ul>
-                            <a href="#" class="button">BUY TODAY</a>
+                            <a href="tel:96394066" class="button">BUY TODAY</a>
                         </div>
                     </div>
                     <!--End Pricing Block-->
@@ -301,7 +301,7 @@
                                 <li>Deep Cleaning Including Windows, Doors, Balconies</li>
                                 <li>Elderly / Kids / Infant care and Assisting in shopping etc.</li>
                             </ul>
-                            <a href="#" class="button">BUY TODAY</a>
+                            <a href="tel:96394066" class="button">BUY TODAY</a>
                         </div>
                     </div>
                     <!--End Pricing Block-->
@@ -321,6 +321,7 @@
                     </div>
                     <blockquote class="col-1 classic">
                         <h4>
+                            <p><a href="tel:96394066">Call us.</a></p>
                             <p> <a
                                     href="https://api.whatsapp.com/send?phone=6596394066&text=hello!%20i%20am%20interested%20in%20your%20cleaning%20services!">
                                     <img src="images/wa_chat_logo.png" />
