--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                             </div>
                             <ul>
                                 <li>Cleaning, Cooking, and Ironing</li>
+                                <li>Cleaning, Cooking, and Ironing</li>
                                 <li>Deep Cleaning Including Windows, Doors, Balconies</li>
                                 <li>Elderly / Kids / Infant care and Assisting in shopping etc.</li>
                             </ul>
