--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon" />
+    <link rel="shortcut icon" href="cp logo280723.jpg" title="centralplacements" />
 
     <!-- Main CSS Files -->
     <link rel="stylesheet" href="css/style.css">
@@ -142,7 +142,7 @@
                 <div class="col-2">
 
                     <div class="section-heading">
-                        <h1>GENERAL HOUSEHOLD SERVICES <br>(HSS Company)</h1>
+                        <h1>GENERAL HOUSEHOLD SERVICES <br><small>(HSS Company)</small></h1>
                         <h2>PROVIDING GENERAL HOUSEHOLD SERVICE, BASIC CHILD-MINDING AND ELDER-MINDING SERVICES</h2>
                     </div>
 
@@ -165,10 +165,11 @@
 
                     <div class="col-3">
                         <div class="section-heading">
-                            <h3>SUCCESS</h3>
-                            <h2 class="section-title">How We Help You To Clean Your House</h2>
-                            <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                            <h3>Services</h3>
+                            <h2 class="section-title">We Help You To Clean Your House</h2>
+                            <p class="section-subtitle">Our Service Workers can be deployed to multiple houses on
+                                part-time basis, they also do not
+                                need to live in the houses that they work at.</p>
                         </div>
 
                     </div>
@@ -248,7 +249,7 @@
                     </div>
 
                     <!--Pricing Block-->
-                    <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="pricing-block featured col-2 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="pricing-block-content">
                             <h3>Basic Domestic / Cleaning Services</h3>
                             <p class="pricing-sub">Monday - Saturday</p>
@@ -268,7 +269,7 @@
                     <!--End Pricing Block-->
 
                     <!--Pricing Block-->
-                    <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="pricing-block featured col-2 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="pricing-block-content">
                             <h3>Basic Domestic / Cleaning Services</h3>
                             <p class="pricing-sub">Sunday / Public Holiday</p>
@@ -288,7 +289,7 @@
                     <!--End Pricing Block-->
 
                     <!--Pricing Block-->
-                    <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="pricing-block featured col-1 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="pricing-block-content">
                             <h3>General Cleaning Services</h3>
                             <p class="pricing-sub">&nbsp </p>
@@ -297,10 +298,45 @@
                                 <p>onwards.</p>
                             </div>
                             <ul>
-                                <li>Cleaning, Cooking, and Ironing</li>
-                                <li>Cleaning, Cooking, and Ironing</li>
-                                <li>Deep Cleaning Including Windows, Doors, Balconies</li>
-                                <li>Elderly / Kids / Infant care and Assisting in shopping etc.</li>
+                                <li>PART-TIME MAIDS/CLEANERS
+                                    <div class="smaller-li">
+                                        Infant/Kids/Elderly care and Assisting in shopping etc.
+                                    </div>
+                                </li>
+                                <li>REGULAR CLEANING
+                                    <div class="smaller-li">
+                                        Islandwide residential land commercial service for a cleaner environment and
+                                        healthier life.
+                                    </div>
+                                </li>
+                                <li>RESDIDENTIAL CLEANING
+                                    <div class="smaller-li">
+                                        Rotational deep-cleaning to maintain the cleanliness of your home for healthier
+                                        living.
+                                    </div>
+                                </li>
+                                <li>COMMERCIAL CLEANING
+                                    <div class="smaller-li">
+                                        Full-range office cleaning service to keep your workspace clean and boost
+                                        employee productivity.
+                                    </div>
+                                </li>
+                                <li>PROFESSIONAL CLEANING
+                                    <div class="smaller-li">
+                                        Professional cleaning service to maintain a clean and hygienic space for
+                                        business operations.
+                                    </div>
+                                </li>
+                                <li>AFTER RENOVATION
+                                    <div class="smaller-li">
+                                        Comprehensive post-renovation cleaning service to remove debris and dust from
+                                        top to bottom.
+                                    </div>
+                                </li>
+                                <li class="smaller-li"> Minimum booking 3 hours per session</li>
+                                <li class="smaller-li"> Our Service Workers can be deployed to multiple houses on
+                                    part-time basis, they also do not
+                                    need to live in the houses that they work at.</li>
                             </ul>
                             <a href="tel:96394066" class="button">BUY TODAY</a>
                         </div>
@@ -351,11 +387,17 @@
                     <!--User Testimonial-->
                     <blockquote class="col-1 classic text-left">
                         <h4>
-                            <p> HP: +65 96394646 / +65 96394066</p>
-                            <p> No. 100 Jalan Sultan, #03-48</p>
-                            <p> Sultan Plaza, Singapore 19001</p>
+                            <p> HP (CALL): +65 96394646</p>
+                            <p> WHATSAPP: +65 96394066</p>
+                            <div class="smaller-li">
+                                <p> No. 100 Jalan Sultan, #03-48</p>
+                                <p> Sultan Plaza, Singapore 19001</p>
+                            </div>
                             <p> Email: <a
                                     href="mailto:centralplacements2022@gmail.com?subject=Hello! i am interested in your cleaning services&amp;body=My name is ">centralplacements2022@gmail.com</a>
+                            </p>
+                            <p>
+                                Website: <a href="www.centralplacement.com">www.centralplacement.com</a>
                             </p>
                         </h4>
                     </blockquote>
