--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                             <p><a href="tel:96394066">Call us.</a></p>
                             <p> <a
                                     href="https://api.whatsapp.com/send?phone=6596394066&text=hello!%20i%20am%20interested%20in%20your%20cleaning%20services!">
-                                    <img src="images/wa_chat_logo.png" />
+                                    <img class="hoverlink" src="images/wa_chat_logo.png" />
                                 </a>
                             </p>
                             <p> Email: <a
