--- a/index.html
+++ b/index.html
@@ -82,26 +82,26 @@
                                         <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                                     </a>
                                 </li>
-                                <!-- <li>
-                                    <a target="_blank" title="Google+" href="http://google.com/+username">
+                                <li>
+                                    <a target="_blank" title="Google+" href="https://www.facebook.com/profile.php?id=100094296364384">
                                         <i class="fa fa-google-plus fa-1x"></i><span>Google+</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" title="Twitter" href="http://www.twitter.com/username">
+                                    <a target="_blank" title="Twitter" href="https://www.facebook.com/profile.php?id=100094296364384">
                                         <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" title="Instagram" href="http://www.instagram.com/username">
+                                    <a target="_blank" title="Instagram" href="https://www.facebook.com/profile.php?id=100094296364384">
                                         <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" title="behance" href="http://www.behance.net">
+                                    <a target="_blank" title="behance" href="https://www.facebook.com/profile.php?id=100094296364384">
                                         <i class="fa fa-behance fa-1x"></i><span>Behance</span>
                                     </a>
-                                </li> -->
+                                </li>
                             </ul>
                             <!--End of Social Icons in Header-->
 
@@ -183,8 +183,8 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>Cleaning &amp; Cooking</h4>
-                                <p>Cleaning, Cooking, and Ironing</p>
+                                <h4>Cleaning Services</h4>
+                                <p>Cleaning, Cooking, Ironing &amp; Etc.</p>
                             </div>
                         </div>
                         <!--End of Icon Block-->
@@ -197,8 +197,8 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>Deep Cleaing</h4>
-                                <p>Deep Cleaning Including Windows, Doors, Balconies</p>
+                                <h4>Domestic Services</h4>
+                                <p>Basic Child-Minding &amp; Elder-Minding.</p>
                             </div>
                         </div>
                         <!--End of Icon Block-->
@@ -211,8 +211,8 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>Domestic services</h4>
-                                <p>Elderly / Kids / Infant care and Assisting in shopping etc.</p>
+                                <h4>Domestic Maid Services</h4>
+                                <p>Full &amp; Part time Maid/Helper.</p>
                             </div>
                         </div>
                         <!--End of Icon Block-->
@@ -225,8 +225,8 @@
                             </div>
                             <!--Icon Block Description-->
                             <div class="icon-block-description">
-                                <h4>Domestic services</h4>
-                                <p>Elderly / Kids / Infant care and Assisting in shopping etc.</p>
+                                <h4>Movers &amp; Delivery Services</h4>
+                                <p>Moving, Disposal &amp; Storage.</p>
                             </div>
                         </div>
                         <!--End of Icon Block-->
@@ -309,7 +309,7 @@
                                         healthier life.
                                     </div>
                                 </li>
-                                <li>RESDIDENTIAL CLEANING
+                                <li>RESIDENTIAL CLEANING
                                     <div class="smaller-li">
                                         Rotational deep-cleaning to maintain the cleanliness of your home for healthier
                                         living.
@@ -370,7 +370,10 @@
                         </h4>
                     </blockquote>
                     <!-- End of Testimonial-->
-
+                    <h4>
+                        <p><a href="https://www.centralmaid.com">Click the link below for Full Time Maid/Helper</a></p>
+                        <p><a href="https://www.centralmaid.com">https://www.centralmaid.com</a></p>
+                    </h4>
                 </div>
 
             </aside>
@@ -385,19 +388,21 @@
                         <h2 class="section-title">Contact information</h2>
                     </div>
                     <!--User Testimonial-->
-                    <blockquote class="col-1 classic text-left">
-                        <h4>
-                            <p> HP (CALL): +65 96394646</p>
-                            <p> WHATSAPP: +65 96394066</p>
+                    <blockquote class="col-1 classic text-left text-left-margin">
+                        <h4 class="larger-text">
+                            <p> HP (CALL): <a href="tel:96394646">+65 96394646</a></p>
+                            <p> WHATSAPP: <a
+                                    href="https://api.whatsapp.com/send?phone=6596394066&text=hello!%20i%20am%20interested%20in%20your%20cleaning%20services!">+65 96394066</a>
+                            </p>
                             <div class="smaller-li">
                                 <p> No. 100 Jalan Sultan, #03-48</p>
-                                <p> Sultan Plaza, Singapore 19001</p>
+                                <p> Sultan Plaza, Singapore 199001</p>
                             </div>
                             <p> Email: <a
                                     href="mailto:centralplacements2022@gmail.com?subject=Hello! i am interested in your cleaning services&amp;body=My name is ">centralplacements2022@gmail.com</a>
                             </p>
                             <p>
-                                Website: <a href="www.centralplacement.com">www.centralplacement.com</a>
+                                Website: <a href="https://www.centralplacement.com">https://www.centralplacement.com</a>
                             </p>
                         </h4>
                     </blockquote>
@@ -424,27 +429,27 @@
                 <!--Social Icons in Footer-->
                 <ul class="col-2 social-icons">
                     <li>
-                        <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
+                        <a target="_blank" title="Facebook" href="https://www.facebook.com/profile.php?id=100094296364384">
                             <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" title="Google+" href="http://google.com/+username">
+                        <a target="_blank" title="Google+" href="https://www.facebook.com/profile.php?id=100094296364384">
                             <i class="fa fa-google-plus fa-1x"></i><span>Google+</span>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" title="Twitter" href="http://www.twitter.com/username">
+                        <a target="_blank" title="Twitter" href="https://www.facebook.com/profile.php?id=100094296364384">
                             <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" title="Instagram" href="http://www.instagram.com/username">
+                        <a target="_blank" title="Instagram" href="https://www.facebook.com/profile.php?id=100094296364384">
                             <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" title="behance" href="http://www.behance.net">
+                        <a target="_blank" title="behance" href="https://www.facebook.com/profile.php?id=100094296364384">
                             <i class="fa fa-behance fa-1x"></i><span>Behance</span>
                         </a>
                     </li>
