--- a/index.html
+++ b/index.html
@@ -291,13 +291,18 @@
                     <!--Pricing Block-->
                     <div class="pricing-block featured col-1 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="pricing-block-content">
-                            <h3>General Cleaning Services</h3>
+                            <h3>Beauty Care & General Cleaning Services</h3>
                             <p class="pricing-sub">&nbsp </p>
                             <div class="pricing">
                                 <div class="price"><span></span>$25</div>
                                 <p>onwards.</p>
                             </div>
                             <ul>
+                                <li>BEAUTY CARE SERVICES
+                                <div class="smaller-li">
+                                    Facial, Threading, Waxing, Massage, Pedicure, Manicure, Part-Time Helpers & etc.
+                                </div>
+                                </li>
                                 <li>PART-TIME MAIDS/CLEANERS
                                     <div class="smaller-li">
                                         Infant/Kids/Elderly care and Assisting in shopping etc.
